added autologger
